Remaining libgit2 rebuilds
* All the rust projects are still depending on the old version, so use
the vendored libgit2
* libgit2-glib: add patch from PR, upstream is inactive
* geany/fritzing: seems to build fine
* kicad: got support with the last patch release

--- a/mingw-w64-bat/PKGBUILD
+++ b/mingw-w64-bat/PKGBUILD
@@ -4,7 +4,7 @@ _realname=bat
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=0.24.0
-pkgrel=4
+pkgrel=5
 pkgdesc="Cat clone with syntax highlighting and git integration (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -16,7 +16,6 @@ msys2_references=(
 )
 license=('spdx:MIT OR Apache-2.0')
 depends=(
-  "${MINGW_PACKAGE_PREFIX}-libgit2"
   "${MINGW_PACKAGE_PREFIX}-oniguruma"
   "${MINGW_PACKAGE_PREFIX}-zlib"
 )
@@ -41,8 +40,10 @@ prepare() {
 build() {
   cd "${_realname}"
 
+  # Not compatible with libgit2 1.8+
+  # export LIBGIT2_NO_VENDOR=1
+
   RUSTONIG_DYNAMIC_LIBONIG=1 \
-  LIBGIT2_NO_VENDOR=1 \
     cargo build --release --frozen
 }
 
