--- a/mingw-w64-delta/PKGBUILD
+++ b/mingw-w64-delta/PKGBUILD
@@ -4,7 +4,7 @@ _realname=delta
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=0.18.2
-pkgrel=1
+pkgrel=2
 pkgdesc='A syntax-highlighting pager for git and diff output (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -16,8 +16,7 @@ msys2_references=(
   'purl: pkg:cargo/git-delta'
 )
 license=('spdx:MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-libgit2"
-         "${MINGW_PACKAGE_PREFIX}-oniguruma"
+depends=("${MINGW_PACKAGE_PREFIX}-oniguruma"
          'git')
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust" "${MINGW_PACKAGE_PREFIX}-pkgconf")
 source=("https://github.com/dandavison/delta/archive/${pkgver}/${_realname}-${pkgver}.tar.gz"
@@ -28,7 +27,8 @@ sha256sums=('64717c3b3335b44a252b8e99713e080cbf7944308b96252bc175317b10004f02'
             '9994d5b61f020f85f67df54c56c793bd4faf41e39b62ddd4e67c482b9a11b73e')
 
 _env() {
-  export LIBGIT2_NO_VENDOR=1
+  # Not compatible with libgit2 1.8+
+  # export LIBGIT2_NO_VENDOR=1
   export RUSTONIG_DYNAMIC_LIBONIG=1
   export WINAPI_NO_BUNDLED_LIBRARIES=1
 }
