--- a/mingw-w64-lsd/PKGBUILD
+++ b/mingw-w64-lsd/PKGBUILD
@@ -6,7 +6,7 @@ _realname=lsd
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=1.1.5
-pkgrel=1
+pkgrel=2
 pkgdesc="The next gen ls command (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,14 +17,15 @@ msys2_references=(
 license=("spdx:Apache-2.0")
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust" "${MINGW_PACKAGE_PREFIX}-pkgconf")
 options=('!strip' '!lto')
-depends=("${MINGW_PACKAGE_PREFIX}-libgit2")
+depends=()
 optdepends=("${MINGW_PACKAGE_PREFIX}-ttf-font-nerd: popular collections such as Font Awesome & fonts such as Hack")
            #'powerline-fonts: powerline symbols for terminals')
 source=("https://github.com/lsd-rs/lsd/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('120935c7e98f9b64488fde39987154a6a5b2236cb65ae847917012adf5e122d1')
 
 _env() {
-  export LIBGIT2_NO_VENDOR=1
+  # Not compatible with libgit2 1.8+
+  # export LIBGIT2_NO_VENDOR=1
   export WINAPI_NO_BUNDLED_LIBRARIES=1
   export SHELL_COMPLETIONS_DIR="$PWD/completions"
 }
