--- a/mingw-w64-wezterm/PKGBUILD
+++ b/mingw-w64-wezterm/PKGBUILD
@@ -5,7 +5,7 @@ pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 _basever=20240203.110809.5046fc22
 pkgver=20240203.110809.5046fc22+r325+g30345b36d
-pkgrel=1
+pkgrel=2
 pkgdesc="A GPU-accelerated cross-platform terminal emulator and multiplexer (mingw-w64)"
 arch=('any')
 mingw_arch=('ucrt64' 'clang64')
@@ -13,8 +13,7 @@ url="https://wezfurlong.org/wezterm/"
 msys2_repository_url='https://github.com/wez/wezterm'
 license=('spdx:MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-openssl"
-         "${MINGW_PACKAGE_PREFIX}-libssh"
-         "${MINGW_PACKAGE_PREFIX}-libgit2")
+         "${MINGW_PACKAGE_PREFIX}-libssh")
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
              "${MINGW_PACKAGE_PREFIX}-zstd"
@@ -43,7 +42,8 @@ prepare() {
 build() {
   cd "${_realname}"
 
-  export LIBGIT2_NO_VENDOR=1
+  # Not compatible with libgit2 1.8+
+  # export LIBGIT2_NO_VENDOR=1
   export OPENSSL_NO_VENDOR=1
   export ZSTD_SYS_USE_PKG_CONFIG=1
   export LIBSSH2_SYS_USE_PKG_CONFIG=1
