--- a/mingw-w64-gitui/PKGBUILD
+++ b/mingw-w64-gitui/PKGBUILD
@@ -4,7 +4,7 @@ _realname=gitui
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=0.26.3
-pkgrel=1
+pkgrel=2
 pkgdesc='Blazing fast terminal-ui for git written in Rust (mingw-w64)'
 msys2_references=(
   'anitya: 187553'
@@ -15,7 +15,7 @@ url='https://github.com/extrawurst/gitui'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-libgit2" "${MINGW_PACKAGE_PREFIX}-libssh2")
+depends=("${MINGW_PACKAGE_PREFIX}-libssh2")
 makedepends=("${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-python"
              "${MINGW_PACKAGE_PREFIX}-pkgconf"
@@ -26,7 +26,8 @@ sha256sums=('b149059b08ce83ad35df027d9a98582a4a2da8b4690caf10690a3999176af8b2')
 
 _env() {
   export OPENSSL_NO_VENDOR=1
-  export LIBGIT2_NO_VENDOR=1
+  # Not compatible with libgit2 1.8+
+  # export LIBGIT2_NO_VENDOR=1
   export PKG_CONFIG_ALL_DYNAMIC=1
   export LIBSSH2_SYS_USE_PKG_CONFIG=1
 }
