tree-sitter: update to 0.24.4

--- a/mingw-w64-tree-sitter/PKGBUILD
+++ b/mingw-w64-tree-sitter/PKGBUILD
@@ -2,9 +2,10 @@
 
 _realname=tree-sitter
 pkgbase=mingw-w64-${_realname}
-pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.24.3
-pkgrel=2
+pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
+         "${MINGW_PACKAGE_PREFIX}-lib${_realname}")
+pkgver=0.24.4
+pkgrel=1
 pkgdesc="An incremental parsing system for programming tools (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -15,18 +16,14 @@ msys2_references=(
   'purl: pkg:cargo/tree-sitter'
 )
 license=('spdx:MIT')
-depends=("${MINGW_PACKAGE_PREFIX}-libwasmtime")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-rust"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
-             "${MINGW_PACKAGE_PREFIX}-pkgconf"
-             "${MINGW_PACKAGE_PREFIX}-openssl"
-             "${MINGW_PACKAGE_PREFIX}-libgit2"
-             "${MINGW_PACKAGE_PREFIX}-libssh2")
+             "${MINGW_PACKAGE_PREFIX}-libwasmtime")
 checkdepends=('git')
 source=("https://github.com/tree-sitter/tree-sitter/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('0a8d0cf8e09caba22ed0d8439f7fa1e3d8453800038e43ccad1f34ef29537da1')
+sha256sums=('d704832a6bfaac8b3cbca3b5d773cad613183ba8c04166638af2c6e5dfb9e2d2')
 noextract=("${_realname}-${pkgver}.tar.gz")
 
 prepare() {
@@ -44,35 +41,49 @@ build() {
     extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
-  export LIBGIT2_NO_VENDOR=1
-  export OPENSSL_NO_VENDOR=1
-  export LIBSSH2_SYS_USE_PKG_CONFIG=1
-  export MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX="
-  export CFLAGS+=" -Wno-incompatible-pointer-types"
-
-  cmake \
-    -GNinja \
-    -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
-    "${extra_config[@]}" \
-    -DBUILD_SHARED_LIBS=ON \
-    -DTREE_SITTER_FEATURE_WASM=ON \
-    -DWASMTIME_INCLUDE_DIR="${MINGW_PREFIX}/include/wasmtime" \
-    -DWASMTIME_LIBRARY="${MINGW_PREFIX}/bin/wasmtime.dll" \
-    -S "${_realname}-${pkgver}/lib" \
-    -B "build-${MSYSTEM}"
+  MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
+  CFLAGS+=" -Wno-incompatible-pointer-types" \
+    cmake \
+      -GNinja \
+      -DCMAKE_INSTALL_PREFIX="${MINGW_PREFIX}" \
+      "${extra_config[@]}" \
+      -DBUILD_SHARED_LIBS=ON \
+      -DTREE_SITTER_FEATURE_WASM=ON \
+      -DCMAKE_DLL_NAME_WITH_SOVERSION=ON \
+      -DWASMTIME_INCLUDE_DIR="${MINGW_PREFIX}/include/wasmtime" \
+      -DWASMTIME_LIBRARY="${MINGW_PREFIX}/bin/wasmtime.dll" \
+      -S "${_realname}-${pkgver}/lib" \
+      -B "build-${MSYSTEM}"
 
   cmake --build "build-${MSYSTEM}"
 
   cargo build \
     --frozen \
     --profile optimize \
+    --features wasm \
     --manifest-path "${_realname}-${pkgver}/Cargo.toml"
 }
 
-package() {
-  DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}"
+package_tree-sitter() {
+  pkgdesc+=' (CLI)'
 
-  install -m755 "${_realname}-${pkgver}/target/optimize/tree-sitter.exe" "${pkgdir}${MINGW_PREFIX}/bin/tree-sitter.exe"
-
+  install -Dm755 "${_realname}-${pkgver}/target/optimize/tree-sitter.exe" "${pkgdir}${MINGW_PREFIX}/bin/tree-sitter.exe"
   install -Dm644 "${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
+
+package_libtree-sitter() {
+  pkgdesc+=' (C library)'
+  depends=("${MINGW_PACKAGE_PREFIX}-libwasmtime")
+
+  DESTDIR="${pkgdir}" cmake --install "build-${MSYSTEM}"
+  install -Dm644 "${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/lib${_realname}/LICENSE"
+}
+
+# vim: set ft=bash :
+
+# generate wrappers
+for _name in "${pkgname[@]}"; do
+  _short="package_${_name#${MINGW_PACKAGE_PREFIX}-}"
+  _func="$(declare -f "${_short}")"
+  eval "${_func/#${_short}/package_${_name}}"
+done
