--- a/mingw-w64-mesonlsp/PKGBUILD
+++ b/mingw-w64-mesonlsp/PKGBUILD
@@ -4,7 +4,7 @@ _realname=mesonlsp
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=4.3.7
-pkgrel=1
+pkgrel=2
 pkgdesc='Meson language server (mingw-w64)'
 arch=('any')
 mingw_arch=('ucrt64')
@@ -13,7 +13,7 @@ license=('spdx:GPL-3.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-curl"
          "${MINGW_PACKAGE_PREFIX}-libarchive"
          "${MINGW_PACKAGE_PREFIX}-pkgconf"
-         "${MINGW_PACKAGE_PREFIX}-tree-sitter"
+         "${MINGW_PACKAGE_PREFIX}-libtree-sitter"
          "${MINGW_PACKAGE_PREFIX}-dlfcn"
          "${MINGW_PACKAGE_PREFIX}-tomlplusplus"
          'git'
