--- a/mingw-w64-neovim/PKGBUILD
+++ b/mingw-w64-neovim/PKGBUILD
@@ -4,7 +4,7 @@ _realname=neovim
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=0.10.2
-pkgrel=1
+pkgrel=2
 pkgdesc='Fork of Vim aiming to improve user experience, plugins, and GUIs (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,7 +21,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-gettext-runtime"
          "${MINGW_PACKAGE_PREFIX}-libvterm"
          "${MINGW_PACKAGE_PREFIX}-luajit"
          "${MINGW_PACKAGE_PREFIX}-msgpack-c"
-         "${MINGW_PACKAGE_PREFIX}-tree-sitter"
+         "${MINGW_PACKAGE_PREFIX}-libtree-sitter"
          "${MINGW_PACKAGE_PREFIX}-unibilium")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
