gimp3: Build GIMP non relocatable
This drops a superfluous .patch and build GIMP as non-relocatable,
which is the expected way to run it in MSYS2 shells.

--- a/mingw-w64-gimp3/PKGBUILD
+++ b/mingw-w64-gimp3/PKGBUILD
@@ -71,12 +71,10 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-qoi")
 source=("https://download.gimp.org/pub/gimp/v3.0/gimp-${_pkgver}-${_pkgversuffix}.tar.xz"
         0001-clang-rc-files-fix.patch
-        0002-skip-test-env.patch
-        0003-dont-install-external-files.patch)
+        0002-skip-test-env.patch)
 sha256sums=('b3d0b264c5e38e789faaf3417003397f3240014c59c7f417f9ca3bd39c5ffb66'
             'f9e0c2fe6d602a5254e4e023a5cb1f66f0ba64c60df925676c2190283ae11747'
-            '511a2a969d1ff3254b4f2453cdfbc3a86a60e2379adf9f6ed5735454a45ef6ee'
-            '00ea605eef20f35f0d8ebb30020322d33c86846f9a156eec3b697289930568a8')
+            '511a2a969d1ff3254b4f2453cdfbc3a86a60e2379adf9f6ed5735454a45ef6ee')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -90,8 +88,7 @@ prepare() {
   cd "${srcdir}/gimp-${_pkgver}-${_pkgversuffix}"
   apply_patch_with_msg \
     0001-clang-rc-files-fix.patch \
-    0002-skip-test-env.patch \
-    0003-dont-install-external-files.patch
+    0002-skip-test-env.patch
 }
 
 build() {
@@ -117,6 +114,7 @@ build() {
     -Dxcursor=disabled \
     -Dwin32-debug-console=true \
     -Denable-default-bin=disabled \
+    -Drelocatable-bundle=no \
     ../gimp-${_pkgver}-${_pkgversuffix}
 
   ${MINGW_PREFIX}/bin/meson.exe compile
