looks like we need 'python-installer' too

--- a/mingw-w64-python-pyvda/PKGBUILD
+++ b/mingw-w64-python-pyvda/PKGBUILD
@@ -17,6 +17,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-comtypes"
          "${MINGW_PACKAGE_PREFIX}-python-pywin32")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('a4ba4c782e7a935c43b0a1355c5af3efe1b52b143c84bd18c40d28ccf5861343')
