--- a/mingw-w64-gpgme/PKGBUILD
+++ b/mingw-w64-gpgme/PKGBUILD
@@ -40,14 +40,12 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "doxygen")
 source=("https://www.gnupg.org/ftp/gcrypt/${_realname}/${_realname}-${pkgver}.tar.bz2"{,.sig}
         0001-fix-find-moc-qt6.patch
-        0002-Build-Python-bindings-without-distutils.patch::"https://git.gnupg.org/cgi-bin/gitweb.cgi?p=gpgme.git;a=patch;h=5844d9e7"
-        0003-Fix-build-with-setuptools-72.2.0.patch::"https://git.gnupg.org/cgi-bin/gitweb.cgi?p=gpgme.git;a=patch;h=ecd0c86d"
         0004-gpgme-find-gnupg.patch
         0005-invoke-scripts-via-sh.patch
         0007-mkdefsinc-use-CPPFLAGS.patch
         0008-no-py2.patch
         0009-fix-broken-version.patch
-        0010-m4-check-python-exit-code.patch
+        0011-dont-include-absolute-unix-paths.patch
         relocatable-cmake.patch
         gpgmepp-portable-types.patch)
 #These might be signed by any of these keys https://gnupg.org/signature_key.html
@@ -57,17 +55,15 @@ validpgpkeys=('5B80C5754298F0CB55D8ED6ABCEF7E294B092E28'
               '02F38DFF731FF97CB039A1DA549E695E905BA208')
 sha256sums=('61e3a6ad89323fecfaff176bc1728fb8c3312f2faa83424d9d5077ba20f5f7da'
             'SKIP'
-            'c5079439302d931371118117ad9a2478163c7a84bb1400a89f2437459eb70f5c'
-            '21cb8ff3f141427d5c55d388cb88c6f5774f592370719d3b632c4a8a70ff179b'
-            '69202c576f5f9980bc88bf9e963fd6199093c89ab8dc3be02ab6c460d65fe1b4'
+            'c40148017c651238956aa8322d4dc23eb7e84a8a3400ddfaaf2c5e0bf24b0855'
             '0ff731656094213854877cfe8f88f4ea562a2191c708a26f567b8ecb4873d5df'
             '75f77086c96fb4bcb9edad01bf64bbf11a7ec435f751b901f3fb180b410fa236'
             'f022993b4ae8f69f8248a6e22a0b6f0d0f43a074cdbcdbe2efb479e48064f988'
-            '0b0d511f9d47844d3fd806864310d9abbeb1285d43f6ffa33babf55a4a410458'
-            'ace3d5166372e0422a625f76a2890d70f2916d9239ade74e58bd23077e9c1c6b'
-            '5e8e7e773a09ed1e1724c9d7216eaaecce52af49152513366026a2fa3245d762'
+            '662691274a9f4de2a4ab10d6c6e13430e98d75ebcd84cf8b4c0598a7dfe950e5'
+            '1287460dbb4bb3d151634dafbd1f954cb50ad66de22c5f89b9723444c828ecba'
+            '0d4ab1a46334eb43307b16159341620c73f21ab7e43cd9957a3890cd4548b753'
             '81f412ffdeeb2a0757248b517fbda9caae9913b1552c88abb8347faa4d1efea2'
-            'a110b40d146a7c561140b68831027f61d2132e1069d2476b2e0a4034bc54fae1')
+            '0b1cad5a41977f6c8de17d06ddf3e92f869d5a447a456067fc47718664f260a4')
 
 _apply_patch_with_msg() {
   for _patch in "$@"
@@ -82,14 +78,12 @@ prepare() {
 
   _apply_patch_with_msg \
     0001-fix-find-moc-qt6.patch \
-    0002-Build-Python-bindings-without-distutils.patch \
-    0003-Fix-build-with-setuptools-72.2.0.patch \
     0004-gpgme-find-gnupg.patch \
     0005-invoke-scripts-via-sh.patch \
     0007-mkdefsinc-use-CPPFLAGS.patch \
     0008-no-py2.patch \
     0009-fix-broken-version.patch \
-    0010-m4-check-python-exit-code.patch \
+    0011-dont-include-absolute-unix-paths.patch \
     relocatable-cmake.patch \
     gpgmepp-portable-types.patch
 
@@ -97,6 +91,7 @@ prepare() {
 }
 
 build() {
+  mkdir -p "${srcdir}"/build-${MSYSTEM}
   cp -r "${srcdir}"/${_realname}-${pkgver} "${srcdir}"/build-${MSYSTEM}
   cd "${srcdir}"/build-${MSYSTEM}
 
@@ -117,7 +112,7 @@ build() {
   # see cmake files for the expected DLL names
   DOXYGEN=/usr/bin/doxygen \
   PYTHON=${MINGW_PREFIX}/bin/python3 \
-  ./configure \
+  "${srcdir}"/${_realname}-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
     --libexecdir=${MINGW_PREFIX}/bin \
     --disable-fd-passing \
