--- a/mingw-w64-nim/PKGBUILD
+++ b/mingw-w64-nim/PKGBUILD
@@ -10,7 +10,7 @@ _csourcesver=86742fb02c6606ab01a532a0085784effb2e753e
 pkgrel=1
 pkgdesc='Imperative, multi-paradigm, compiled programming language (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64')
 url='https://nim-lang.org/'
 msys2_references=(
   "cpe: cpe:/a:nim-lang:nim"
