wget: Update to 1.25.0

--- a/mingw-w64-wget/PKGBUILD
+++ b/mingw-w64-wget/PKGBUILD
@@ -4,7 +4,7 @@
 _realname=wget
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.24.5
+pkgver=1.25.0
 pkgrel=1
 pkgdesc='Wget retrieves files using HTTP, HTTPS and FTP (mingw-w64)'
 arch=('any')
@@ -21,7 +21,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-autotools"
              "autoconf-archive")
 source=("https://ftp.gnu.org/gnu/wget/${_realname}-${pkgver}.tar.lz"{,.sig})
-sha256sums=('57a107151e4ef94fdf94affecfac598963f372f13293ed9c74032105390b36ee'
+sha256sums=('19225cc756b0a088fc81148dc6a40a0c8f329af7fd8483f1c7b2fe50f4e08a1f'
             'SKIP')
 validpgpkeys=('7845120B07CBD8D6ECE5FF2B2A1743EDA91A35B6')
 
@@ -33,6 +33,10 @@ prepare() {
 
 build() {
   mkdir -p ${srcdir}/build-${MSYSTEM} && cd ${srcdir}/build-${MSYSTEM}
+
+  # Work around gnulib conflict with mingw-w64
+  # https://github.com/coreutils/gnulib/issues/20
+  export gl_cv_var___daylight=__daylight
 
   ../${_realname}-${pkgver}/configure \
     --prefix=${MINGW_PREFIX} \
