pyinstaller-books-contrib: update to 2024.10

--- a/mingw-w64-pyinstaller-hooks-contrib/PKGBUILD
+++ b/mingw-w64-pyinstaller-hooks-contrib/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=pyinstaller-hooks-contrib
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=2024.9
-pkgrel=2
+pkgver=2024.10
+pkgrel=1
 pkgdesc='Community maintained hooks for PyInstaller (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -17,7 +17,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname//-/_}-${pkgver}.tar.gz")
-sha256sums=('4793869f370d1dc4806c101efd2890e3c3e703467d8d27bb5a3db005ebfb008d')
+sha256sums=('8a46655e5c5b0186b5e527399118a9b342f10513eb1425c483fa4f6d02e8800c')
 
 build() {
   cp -r "${_realname//-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
@@ -32,6 +32,5 @@ package() {
     python -m installer --prefix=${MINGW_PREFIX} \
     --destdir="${pkgdir}" dist/*.whl
 
-  install -Dm644 LICENSE.APL.txt "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.APL.txt"
-  install -Dm644 LICENSE.GPL.txt "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE.GPL.txt"
+  install -Dm644 LICENSE "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
