--- a/mingw-w64-crt-git/PKGBUILD
+++ b/mingw-w64-crt-git/PKGBUILD
@@ -3,9 +3,9 @@
 _realname=crt
 pkgbase=mingw-w64-${_realname}-git
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-git"
-pkgver=12.0.0.r369.g0d4221712
-pkgrel=2
-_commit='0d42217123d3aec0341b79f6d959c76e09648a1e'
+pkgver=12.0.0.r378.ga0f68282b
+pkgrel=1
+_commit='a0f68282b1fb5d2490e2fef052306ed9542e9962'
 pkgdesc='MinGW-w64 CRT for Windows (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -22,7 +22,7 @@ provides=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 options=('!strip' '!buildflags' '!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit")
-sha256sums=('9e485504bc32b5b7d7d732388a602749ce4268141d616eb6259777a0da032fe0')
+sha256sums=('4af6abfa9f352a3abab08e97a26c9c945beaf48b73e8d9368c35a44f27fa8ef7')
 
 pkgver() {
   cd "${srcdir}/mingw-w64"
