--- a/mingw-w64-python-cx-freeze/PKGBUILD
+++ b/mingw-w64-python-cx-freeze/PKGBUILD
@@ -16,7 +16,7 @@ pkgver=7.2.5
 pkgrel=1
 pkgdesc="Creates standalone executables from Python scripts, with the same performance (mingw-w64)"
 source=(
-    https://pypi.io/packages/source/c/cx_Freeze/cx_freeze-${pkgver}.tar.gz
+    https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz"
 )
 sha256sums=(
     '63f9b745b8a84a1c3ce986d089f3d750ec65b9ff385ed64308c073a821d81eef'
@@ -31,6 +31,7 @@ url="https://github.com/marcelotduarte/cx_Freeze/"
 options=(!strip)
 depends=(
   "${MINGW_PACKAGE_PREFIX}-python"
+  "${MINGW_PACKAGE_PREFIX}-python-packaging"
   "${MINGW_PACKAGE_PREFIX}-python-setuptools"
   "${MINGW_PACKAGE_PREFIX}-python-cx-logging"
   "${MINGW_PACKAGE_PREFIX}-python-lief"
