--- a/mingw-w64-nix/PKGBUILD
+++ b/mingw-w64-nix/PKGBUILD
@@ -11,7 +11,7 @@ mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://nixos.org/"
 license=('spdx:LGPL-2.1-or-later')
 makedepends=(
-  "${MINGW_PACKAGE_PREFIX}-gcc"
+  "${MINGW_PACKAGE_PREFIX}-cc"
   "${MINGW_PACKAGE_PREFIX}-meson"
   "${MINGW_PACKAGE_PREFIX}-ninja"
 )
