nix: add missing nlohmann_json dependency

--- a/mingw-w64-nix/PKGBUILD
+++ b/mingw-w64-nix/PKGBUILD
@@ -25,6 +25,7 @@ depends=(
   "${MINGW_PACKAGE_PREFIX}-libgit2"
   "${MINGW_PACKAGE_PREFIX}-libsodium"
   "${MINGW_PACKAGE_PREFIX}-libunistring"
+  "${MINGW_PACKAGE_PREFIX}-nlohmann_json"
   "${MINGW_PACKAGE_PREFIX}-readline"
   "${MINGW_PACKAGE_PREFIX}-sqlite3"
   "${MINGW_PACKAGE_PREFIX}-termcap"
