--- a/mingw-w64-nix/PKGBUILD
+++ b/mingw-w64-nix/PKGBUILD
@@ -12,6 +12,7 @@ url="https://nixos.org/"
 license=('spdx:LGPL-2.1-or-later')
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-cc"
+  "${MINGW_PACKAGE_PREFIX}-cmake"
   "${MINGW_PACKAGE_PREFIX}-meson"
   "${MINGW_PACKAGE_PREFIX}-ninja"
 )
