nix: remove mingw32 arch, no libsodium

--- a/mingw-w64-nix/PKGBUILD
+++ b/mingw-w64-nix/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.25.0
 pkgrel=1
 pkgdesc="The purely functional package manager"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://nixos.org/"
 license=('spdx:LGPL-2.1-or-later')
 makedepends=(
