--- a/mingw-w64-llvm/PKGBUILD
+++ b/mingw-w64-llvm/PKGBUILD
@@ -28,11 +28,11 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-llvm"
          "${MINGW_PACKAGE_PREFIX}-compiler-rt"
          $( (( _clangprefix )) && echo "${MINGW_PACKAGE_PREFIX}-gcc-compat" )
          "${MINGW_PACKAGE_PREFIX}-lld")
-_version=18.1.8
+_version=19.1.3
 _rc=""
 _tag=llvmorg-${_version}${_rc}
 pkgver=${_version}${_rc/-/}
-pkgrel=2
+pkgrel=1
 pkgdesc="C language family frontend for LLVM (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -75,30 +75,32 @@ source=("${_url}/llvm-${pkgver}.src.tar.xz"{,.sig}
         "0101-link-pthread-with-mingw.patch"
         "0102-Rename-flang-new-flang-experimental-exec-to-flang.patch"
         # 0201-0299 -> rt
+        "0201-compiler-rt-fix-mingw-compile-error.patch"
         # 0301-0399 -> lld
         "0303-ignore-new-bfd-options.patch"
         # 0401-0499 -> clang-tools-extra
         )
-sha256sums=('f68cf90f369bc7d0158ba70d860b0cb34dbc163d6ff0ebc6cfa5e515b9b2e28d'
+sha256sums=('11e166d0f291a53cfc6b9e58abd1d7954de32ebc37672987612d3b7075d88411'
             'SKIP'
-            '5724fe0a13087d5579104cedd2f8b3bc10a212fb79a0fcdac98f4880e19f4519'
+            '0a0dd316931f2cac7090d2aa434b5d0c332fe19b801c6c94f109053b52b35cc1'
             'SKIP'
-            'e58877fcd95ed106824bd1a31276dd17ed0c53adcd60ca75289eac0654f0a7f1'
+            '6358ee4be9573fb025dad0a6fc9a5270fc2cb644a6504ff2970ca60abad7e345'
             'SKIP'
-            'e054e99a9c9240720616e927cb52363abbc8b4f1ef0286bad3df79ec8fdf892f'
+            '9c57dfa7796c254f85ade3f84f12e3a7dd5dae65c0ade428367fe8c5218f856a'
             'SKIP'
-            '800e6805fb613eb8428f7a199f6d06c4c19f78f2db69157a129bb04fc1c99769'
+            '74b7785f5ae03ffe8af71b76eebbb192ac722af2189bed96e8693bd694d1f7fd'
             'SKIP'
-            '59badef592dd34893cd319d42b323aaa990b452d05c7180ff20f23ab1b41e837'
+            '4c55aa6e77fc0e8b759bca2c79ee4fd0ea8c7fab06eeea09310ae1e954a0af5e'
             'SKIP'
-            'b76b810f3d3dc5d08e83c4236cb6e395aa9bd5e3ea861e8c319b216d093db074'
+            'ec13c6c3466dc88e7b29b47347e2b88337d5b83c778d92e3c4c3acd17d3cc534'
             'SKIP'
             'eb03df53671df6627768141b3aaa76abe176a14e5e47911c97bec544387c4aff'
-            '0aff3a85d70ae437dfc634fe40db506bf5701403049284ffbdb931135ae8a483'
-            '016fbf6f742c062cc59360070264546c10385b1e8c37605758f62dcbea8f9bcc'
-            '5f86e542dd1ec92b2fe06ee59061c3e23512df7bafabe82206f2b7d80b81836b'
+            'ff8bf96fae9531cf6231b502e8c2f38843f826a9dc7e0d98a37cb80fddd36cf4'
+            '790eb0fccb4ef29c3795bceb8a62c8f4ecd0bdd6c49b2812352b04cfbc552342'
+            '76d2a88733cebb1f01b766ff2ab91a9e095bae1d2e4cc18c1ffcf21fd095efc4'
             '715cb8862753854b2d9256e0b70003e2d1f57083d83eaeaf5a095fc72b8a4e26'
             '2770cadf8ccf6b31aece6aee8f76dceb71e6e9d01fdf3be74c3743480ce34899'
+            'b6b56d031bba8ae87bb1ac607025c0dcbf2b88aec9bfeaf1c9786ca5093b7b71'
             'fd0253879cc5e31857f57307e6105e56493358e35d7c4540e0b476be607ab94e')
 validpgpkeys=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D'  # Hans Wennborg, Google.
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard
@@ -153,6 +155,12 @@ prepare() {
   # https://reviews.llvm.org/D143592
   apply_patch_with_msg \
     "0102-Rename-flang-new-flang-experimental-exec-to-flang.patch"
+
+  # Patch compiler-rt
+  cd "${srcdir}"/compiler-rt
+
+  apply_patch_with_msg \
+    "0201-compiler-rt-fix-mingw-compile-error.patch"
 
   # Patch lld
   cd "${srcdir}"/lld
