--- a/mingw-w64-flang/PKGBUILD
+++ b/mingw-w64-flang/PKGBUILD
@@ -5,7 +5,7 @@ _compiler=clang
 _realname=flang
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-_version=18.1.8
+_version=19.1.3
 _rc=""
 _tag=llvmorg-${_version}${_rc}
 pkgver=${_version}${_rc/-/}
@@ -44,14 +44,14 @@ source=("${_url}/${_pkgfn}.tar.xz"{,.sig}
         "0006-Rename-flang-new-flang-experimental-exec-to-flang.patch"
         "0007-add-municode-flag-on-mingw.patch"
         "0008-do-not-use-clock_gettime-on-mingw.patch")
-sha256sums=('3532b790760f83d5086b913c0ee2479b42605720090dd47f91f58512ab17493c'
+sha256sums=('3d16550042dcb081bb515bca0e27821d3bf9c855362d2b3ec9c71afb034f9bcc'
             'SKIP'
-            '59badef592dd34893cd319d42b323aaa990b452d05c7180ff20f23ab1b41e837'
+            '4c55aa6e77fc0e8b759bca2c79ee4fd0ea8c7fab06eeea09310ae1e954a0af5e'
             'SKIP'
             '77fb0612217b6af7a122f586a9d0d334cd48bb201509bf72e8f8e6244616e895'
-            '522dabff1ae18218c4dfea484d472f9fac3cd3f597de2afde1e338ed57363405'
+            '90bec8f2a9a8d62b57959722f3b15a54dfdaf24e0a5ea884bf6b1288d0853be8'
             'a1811227e2a26c2786b0c8577528580e679111f6c0889afea57d08333e2d5e4f'
-            '8f98b693171de1aa573372041275dd73b282ab417e0553c7a8be1d1848b1f1ad'
+            'f1b7a186e4890a67adc8e56800c7a91e72f04f14df3db20d7bcf7eaa149aa567'
             '45f8da68b2cb48c85db7099e174e7eebeabe90207a23ff19c7fe1e7f1f8541d8'
             'be1265d4922f45cc4e7ec6a80247baba8b1e648e1e514718ebd1004958bae967')
 validpgpkeys=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D'  # Hans Wennborg, Google.
@@ -108,6 +108,8 @@ build() {
     -DLLVM_ENABLE_THREADS=ON \
     -DLLVM_LINK_LLVM_DYLIB=ON \
     -DCLANG_DIR=${MINGW_PREFIX}/lib/cmake/clang \
+    -DLLVM_DIR=${MINGW_PREFIX}/lib/cmake/llvm \
+    -DMLIR_DIR=${MINGW_PREFIX}/lib/cmake/mlir \
     -DFLANG_INCLUDE_TESTS=OFF \
     "${_extra_config[@]}" \
     -Wno-dev \
