--- a/mingw-w64-llvm-openmp/PKGBUILD
+++ b/mingw-w64-llvm-openmp/PKGBUILD
@@ -7,7 +7,7 @@ fi
 _realname=openmp
 pkgbase=mingw-w64-llvm-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-llvm-${_realname}")
-_version=18.1.8
+_version=19.1.3
 _rc=""
 _tag=llvmorg-${_version}${_rc}
 pkgver=${_version}${_rc/-/}
@@ -29,6 +29,7 @@ depends=($( (( _clangprefix )) || echo "${MINGW_PACKAGE_PREFIX}-gcc-libs"))
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-python"
              $( [[ ${MSYSTEM} == CLANG32 ]] || echo "${MINGW_PACKAGE_PREFIX}-fc")
              $( [[ $CARCH == aarch64 ]] || echo "${MINGW_PACKAGE_PREFIX}-uasm" ))
 _url=https://github.com/llvm/llvm-project/releases/download/${_tag}
@@ -37,9 +38,9 @@ source=($_url/$_pkgfn.tar.xz{,.sig}
         ${_url}/cmake-${pkgver}.src.tar.xz{,.sig}
         "001-cast-to-make-gcc-happy.patch"
         "002-hacks-for-static-linking.patch")
-sha256sums=('60ed57245e73894e4a2a89b15889f367bd906abfe6d3f92e1718223d4b496150'
+sha256sums=('6c671756d7412bbf0085e7deffc7e8b4ac34955b33dce76c526795df1e9b48a7'
             'SKIP'
-            '59badef592dd34893cd319d42b323aaa990b452d05c7180ff20f23ab1b41e837'
+            '4c55aa6e77fc0e8b759bca2c79ee4fd0ea8c7fab06eeea09310ae1e954a0af5e'
             'SKIP'
             '11352ffbe7559a7170f2abd52b3552c877fbcf8fc82cff77b421e8b130a4dd66'
             '7238f009264bc1b162b73ca3a2a0b224b65ec3ed384304f3e5464032c4c026f4')
@@ -65,8 +66,6 @@ prepare() {
       "001-cast-to-make-gcc-happy.patch"
   fi
   apply_patch_with_msg 002-hacks-for-static-linking.patch
-  # Fix building Fortran modules with flang
-  sed -e 's|^!DIR|!!DIR|g' -i runtime/src/include/omp_lib.f90.var
 }
 
 build() {
