--- a/mingw-w64-mlir/PKGBUILD
+++ b/mingw-w64-mlir/PKGBUILD
@@ -5,7 +5,7 @@ _compiler=clang
 _realname=mlir
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-_version=18.1.8
+_version=19.1.3
 _rc=""
 _tag=llvmorg-${_version}${_rc}
 pkgver=${_version}${_rc/-/}
@@ -32,16 +32,19 @@ _pkgfn=${_realname}-${pkgver}.src
 _url=https://github.com/llvm/llvm-project/releases/download/${_tag}
 source=("${_url}/${_pkgfn}.tar.xz"{,.sig}
         "${_url}/cmake-${pkgver}.src.tar.xz"{,.sig}
-        0001-tablegen.patch)
-sha256sums=('dd0c48618d1663b58ebce78213d592a90db11550199fa4fd0181cc2601316bf9'
+        0001-tablegen.patch
+        0002-add-missing-compile-definitions.patch
+        0003-Fix-build-MLIRExecutionEngineShared.patch)
+sha256sums=('806b68f8d9c4e09bbc829f312a6eeb50217a064c75f123079b8ac45575a6b49b'
             'SKIP'
-            '59badef592dd34893cd319d42b323aaa990b452d05c7180ff20f23ab1b41e837'
+            '4c55aa6e77fc0e8b759bca2c79ee4fd0ea8c7fab06eeea09310ae1e954a0af5e'
             'SKIP'
-            '3f61c66d5615e387ac1c00dbeb1b5840305ff578de81d60eb65553ff17ced8c6')
+            '3f61c66d5615e387ac1c00dbeb1b5840305ff578de81d60eb65553ff17ced8c6'
+            'd007b26d4c97667518f524105d5a7a14c9fe9e5f595fd48562dacb722ea650fa'
+            'c6048c4042d47d2d3e7d13f0f8af78bf6120d8d8d86f9a8eaf2b433ee1926e80')
 validpgpkeys=('B6C8F98282B944E3B0D5C2530FC3042E345AD05D'  # Hans Wennborg, Google.
               '474E22316ABF4785A88C6E8EA2C794A986419D8A'  # Tom Stellard
               'D574BD5D1D0E98895E3BF90044F2485E45D59042') # Tobias Hieta
-noextract=(llvm-project-${pkgver}.src.tar.xz)
 
 prepare() {
   [[ -d ./cmake ]] && rm -rf ./cmake
@@ -49,6 +52,10 @@ prepare() {
 
   cd "${srcdir}"/${_pkgfn}
   patch -p1 -i "${srcdir}"/0001-tablegen.patch
+  # For some reason the COMPILE_DEFINITIONS didn't propgate to source files
+  # from the library, Either a bug from CMake or LLVM.
+  patch -p1 -i "${srcdir}"/0002-add-missing-compile-definitions.patch
+  patch -p1 -i "${srcdir}"/0003-Fix-build-MLIRExecutionEngineShared.patch
 }
 
 build() {
