nix: add name to source
Co-authored-by: Maksim Bondarenkov <119937608+ognevny@users.noreply.github.com>

--- a/mingw-w64-nix/PKGBUILD
+++ b/mingw-w64-nix/PKGBUILD
@@ -32,7 +32,7 @@ depends=(
   "${MINGW_PACKAGE_PREFIX}-termcap"
   "${MINGW_PACKAGE_PREFIX}-toml11"
 )
-source=("https://github.com/NixOS/nix/archive/${pkgver}.tar.gz")
+source=("https://github.com/NixOS/nix/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
 sha256sums=('6bf0d862837f59dfcdecc38533cfa3851aa02dc6a1d02cb7392e47108e9dc5da')
 # Nix purposely has broken symlinks (for tests) in the package.
 # We have to use this form of symlinks in order to extract.
