--- a/mingw-w64-qt-creator/PKGBUILD
+++ b/mingw-w64-qt-creator/PKGBUILD
@@ -8,7 +8,7 @@ pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-devel")
 _base_ver=14.0.1
 pkgver=${_base_ver/-/}
-pkgrel=2
+pkgrel=3
 pkgdesc='Lightweight, cross-platform integrated development environment (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -41,11 +41,15 @@ _pkgfqn="${_realname}-opensource-src-${_base_ver}"
 source=(https://download.qt.io/official_releases/qtcreator/${_base_ver%.*}/${_base_ver}/${_pkgfqn}.tar.xz
         qt-creator-3.2.0-Allow-iOS-plugin-on-any-platform.patch
         qt-creator-5.0.1-fix-library-archive-path.patch
-        003-link-against-clang-cpp.patch)
+        003-link-against-clang-cpp.patch
+        004-support-llvm-19.patch::https://invent.kde.org/qt/qt-creator/qt-creator/-/commit/711c6d85.patch
+        005-fix-build-with-clang-19.patch)
 sha256sums=('9595d2e6c65bb918e78376314341dc2bef491c3200a5c6d5ce6f305509b0b28b'
             'd53c00ab39d0fd16c03a1031fdb4e96f817ef120575866f4f03b307e521438bd'
             '29d67f88f071abe7a4b589182767b8a697fe4e516d70707bfca88f035883718f'
-            '5d6c0b626ef29ce39372eb180527d64e11af2bf39a1a3e84e709464a20d2433b')
+            '5d6c0b626ef29ce39372eb180527d64e11af2bf39a1a3e84e709464a20d2433b'
+            'c8ee06da9c9c181b5f11851b82b9bd3b28b7396c3cd7b3cef1e09aa800bd8c09'
+            '8cd86db9560698e86f8bac61294c8e6b5f23ad07ce4d3e87c266e1f731fff8aa')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -61,7 +65,9 @@ prepare() {
   apply_patch_with_msg \
     qt-creator-3.2.0-Allow-iOS-plugin-on-any-platform.patch \
     qt-creator-5.0.1-fix-library-archive-path.patch \
-    003-link-against-clang-cpp.patch
+    003-link-against-clang-cpp.patch \
+    004-support-llvm-19.patch \
+    005-fix-build-with-clang-19.patch
 }
 
 build() {
@@ -74,6 +80,11 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
+  if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
+    _extra_config+=("-DWITH_QMLDESIGNER=OFF")
+  fi
+
+  CXXFLAGS+=" -Wno-deprecated-declarations" \
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake.exe \
     -GNinja \
