--- a/mingw-w64-ghdl/PKGBUILD
+++ b/mingw-w64-ghdl/PKGBUILD
@@ -4,7 +4,7 @@ pkgbase="mingw-w64-${_realname}"
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-llvm"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-mcode")
 pkgver=4.1.0
-pkgrel=3
+pkgrel=4
 pkgdesc='GHDL: the open-source analyzer, compiler, simulator and (experimental) synthesizer for VHDL'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -22,8 +22,15 @@ makedepends=(
 )
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 options=(!emptydirs)
-source=("https://github.com/ghdl/ghdl/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('0aab531b45a6613b0918f3ac6ec717b8acfad051d1abb1c39eb7490590c7a324')
+source=("https://github.com/ghdl/ghdl/archive/v${pkgver}/${_realname}-${pkgver}.tar.gz"
+        001-support-llvm-19.patch::https://github.com/ghdl/ghdl/commit/6a9c70dd.patch)
+sha256sums=('0aab531b45a6613b0918f3ac6ec717b8acfad051d1abb1c39eb7490590c7a324'
+            'e3792de2e2cbd6ef96a53d9f2a1f025bc5f88c063ae523979e86e95a47a09841')
+
+prepare() {
+  cd ${_realname}-${pkgver}
+  patch -p1 -i ${srcdir}/001-support-llvm-19.patch
+}
 
 build() {
   echo "Building ghdl-llvm..."
