patch inkscape to handle newer poppler

--- a/mingw-w64-inkscape/PKGBUILD
+++ b/mingw-w64-inkscape/PKGBUILD
@@ -75,11 +75,13 @@ optdepends=(#"${MINGW_PACKAGE_PREFIX}-pstoedit: latex formulas"
 source=("https://media.inkscape.org/dl/resources/file/${_realname}-${pkgver}.tar.xz"
         inkscape-1.0.1-unbundle.patch
         inkscape-1.0.1-install-layout.patch
-        007-no-console-clang.patch)
+        007-no-console-clang.patch
+        008-poppler.patch)
 sha256sums=('c59a85453b699addebcd51c1dc07684dd96a10c8aec716b19551db50562e13f5'
             '92387251c1740f1a57cde9e587cc673ef1600813617bd2c9db65598c324a24d4'
             '131b2e1190637df0554ef1ee8cf46440689584375c117d057ab47d5871c58128'
-            'c49d38b7c1a66e4b40e1b75fb055b730eb863a67a74d899da6d4d6db6baedcec')
+            'c49d38b7c1a66e4b40e1b75fb055b730eb863a67a74d899da6d4d6db6baedcec'
+            'f2ce2d04cfd8b7db046c57cdc2fd4dc8d5946642f7d47b1d8b87ebc2cd6e8ccc')
 noextract=("${_realname}-${pkgver}.tar.xz")
 
 apply_patch_with_msg() {
