--- a/mingw-w64-winpthreads-git/PKGBUILD
+++ b/mingw-w64-winpthreads-git/PKGBUILD
@@ -5,9 +5,9 @@
 _realname=winpthreads
 pkgbase=mingw-w64-${_realname}-git
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-git" "${MINGW_PACKAGE_PREFIX}-libwinpthread-git")
-pkgver=12.0.0.r369.g0d4221712
+pkgver=12.0.0.r386.gc6857dc97
 pkgrel=1
-_commit='0d42217123d3aec0341b79f6d959c76e09648a1e'
+_commit='c6857dc97a70e5587e639a107255b0d2d1e7a200'
 pkgdesc="MinGW-w64 winpthreads library (mingw-w64)"
 url="https://www.mingw-w64.org/"
 msys2_repository_url="https://sourceforge.net/p/mingw-w64/mingw-w64/ci/master/tree/mingw-w64-libraries/winpthreads"
@@ -27,7 +27,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
 options=('!emptydirs')
 source=("mingw-w64"::"git+https://git.code.sf.net/p/mingw-w64/mingw-w64#commit=$_commit"
         "0001-Define-__-de-register_frame_info-in-fake-libgcc_s.patch")
-sha256sums=('9e485504bc32b5b7d7d732388a602749ce4268141d616eb6259777a0da032fe0'
+sha256sums=('8deabe607a8bc8ddf6894574c5367416373d83593a4806eb6bf225f4113715ff'
             '2e779bcc60a1422b23e0cfdb5c0f6851f2382592bb4675d08a6bdef78d5e5c10')
 
 pkgver() {
