python-cx-freeze: fix typo

--- a/mingw-w64-python-cx-freeze/PKGBUILD
+++ b/mingw-w64-python-cx-freeze/PKGBUILD
@@ -15,9 +15,7 @@ replaces=("${MINGW_PACKAGE_PREFIX}-python3-cx_Freeze"
 pkgver=7.2.5
 pkgrel=1
 pkgdesc="Creates standalone executables from Python scripts, with the same performance (mingw-w64)"
-source=(
-    https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz"
-)
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz")
 sha256sums=(
     '63f9b745b8a84a1c3ce986d089f3d750ec65b9ff385ed64308c073a821d81eef'
 )
