Drop more clang32 packages

--- a/mingw-w64-crypto++/PKGBUILD
+++ b/mingw-w64-crypto++/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=8.9.0
 pkgrel=1
 pkgdesc="Crypto++ Library is a free C++ class library of cryptographic schemes (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.cryptopp.com/"
 msys2_references=(
   "cpe: cpe:/a:cryptopp:crypto%2b%2b"
