--- a/mingw-w64-egl-headers/PKGBUILD
+++ b/mingw-w64-egl-headers/PKGBUILD
@@ -10,7 +10,7 @@ pkgrel=1
 _commit=9ab603608d6b165f79f17eee9ee1ced861625893
 pkgdesc="EGL header files (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://registry.khronos.org/EGL/"
 license=('spdx:Apache-2.0')
 depends=()
