--- a/mingw-w64-gi-docgen/PKGBUILD
+++ b/mingw-w64-gi-docgen/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2024.1
 pkgrel=3
 pkgdesc='Documentation tool for GObject-based libraries (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'archlinux: gi-docgen'
   'pypi: gi-docgen'
