--- a/mingw-w64-gnutls/PKGBUILD
+++ b/mingw-w64-gnutls/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=3.8.8
 pkgrel=1
 pkgdesc="A library which provides a secure layer over a reliable transport layer (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:GPL-3.0-or-later' 'spdx:LGPL-2.1-or-later')
 url="https://www.gnutls.org/"
 msys2_repository_url="https://gitlab.com/gnutls/gnutls"
