--- a/mingw-w64-http-parser/PKGBUILD
+++ b/mingw-w64-http-parser/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=2.9.4
 pkgrel=2
 pkgdesc="Parser for HTTP Request/Response written in C (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/nodejs/http-parser'
 license=('MIT')
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc")
