--- a/mingw-w64-libunibreak/PKGBUILD
+++ b/mingw-w64-libunibreak/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=6.1
 pkgrel=1
 pkgdesc="An implementation of the line breaking algorithm as described in Unicode 5.2.0 Standard Annex 14, Revision 24 (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/adah1972/libunibreak/'
 license=('spdx:Zlib')
 makedepends=("${MINGW_PACKAGE_PREFIX}-autotools"
