--- a/mingw-w64-SDL/PKGBUILD
+++ b/mingw-w64-SDL/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.2.15+r419+gef3a6c05
 pkgrel=1
 pkgdesc="A library for portable low-level access to a video framebuffer, audio output, mouse, and keyboard (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://libsdl.org"
 msys2_references=(
   "cpe: cpe:/a:libsdl:libsdl"
