--- a/mingw-w64-cmocka/PKGBUILD
+++ b/mingw-w64-cmocka/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.1.7
 pkgrel=1
 pkgdesc="Unit testing framework for C (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('spdx:Apache-2.0')
 url="https://cmocka.org/"
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
