--- a/mingw-w64-gles-headers/PKGBUILD
+++ b/mingw-w64-gles-headers/PKGBUILD
@@ -10,7 +10,7 @@ pkgrel=1
 _commit=d127c3015a5429a5261b3bf464c9a07c00576048
 pkgdesc="OpenGL|ES header files (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.khronos.org/opengles"
 license=('spdx:MIT')
 depends=()
