--- a/mingw-w64-glslang/PKGBUILD
+++ b/mingw-w64-glslang/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=14.3.0
 pkgrel=1
 pkgdesc='An OpenGL and OpenGL ES shader front end and validator (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/KhronosGroup/glslang'
 msys2_references=(
   'archlinux: glslang'
