--- a/mingw-w64-imath/PKGBUILD
+++ b/mingw-w64-imath/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=3.1.12
 pkgrel=2
 pkgdesc='A C++ and python library of 2D and 3D vector, matrix, and math operations for computer graphics (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://www.openexr.com/'
 msys2_repository_url="https://github.com/AcademySoftwareFoundation/Imath"
 license=('spdx:BSD-3-Clause')
