--- a/mingw-w64-nettle/PKGBUILD
+++ b/mingw-w64-nettle/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=3.10
 pkgrel=1
 pkgdesc="A low-level cryptographic library (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_repository_url='https://git.lysator.liu.se/nettle/nettle'
 url="https://www.lysator.liu.se/~nisse/nettle"
 msys2_references=(
