--- a/mingw-w64-python-pycparser/PKGBUILD
+++ b/mingw-w64-python-pycparser/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=2.22
 pkgrel=2
 pkgdesc='Complete parser of the C language, written in pure Python (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/eliben/pycparser'
 msys2_references=(
   'pypi: pycparser'
