--- a/mingw-w64-python-smartypants/PKGBUILD
+++ b/mingw-w64-python-smartypants/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=2.0.1
 pkgrel=7
 pkgdesc="Python with the SmartyPants (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://github.com/leohemsted/smartypants.py'
 msys2_references=(
   'pypi: smartypants'
