--- a/mingw-w64-python-sphinx_rtd_theme/PKGBUILD
+++ b/mingw-w64-python-sphinx_rtd_theme/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=3.0.1
 pkgrel=2
 pkgdesc="Python Sphinx Read The Docs Theme (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: sphinx-rtd-theme'
 )
