--- a/mingw-w64-python-sphinxcontrib-jquery/PKGBUILD
+++ b/mingw-w64-python-sphinxcontrib-jquery/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=4.1
 pkgrel=3
 pkgdesc="Extension to include jQuery on newer Sphinx releases (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: sphinxcontrib-jquery'
 )
