--- a/mingw-w64-python-typogrify/PKGBUILD
+++ b/mingw-w64-python-typogrify/PKGBUILD
@@ -8,7 +8,7 @@ pkgver=2.0.7
 pkgrel=6
 pkgdesc='Filters to enhance web typography, including support for Django & Jinja templates (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: typogrify'
 )
