--- a/mingw-w64-python-wheel/PKGBUILD
+++ b/mingw-w64-python-wheel/PKGBUILD
@@ -10,7 +10,7 @@ pkgver=0.43.0
 pkgrel=3
 pkgdesc="A built-package format for Python (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 msys2_references=(
   'pypi: wheel'
   "cpe: cpe:/a:wheel_project:wheel"
