--- a/mingw-w64-sdl12-compat/PKGBUILD
+++ b/mingw-w64-sdl12-compat/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.2.68
 pkgrel=1
 pkgdesc="SDL 1.2 runtime compatibility library using SDL 2.0"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/libsdl-org/sdl12-compat"
 license=('spdx:Zlib')
 conflicts=("${MINGW_PACKAGE_PREFIX}-SDL")
