--- a/mingw-w64-speexdsp/PKGBUILD
+++ b/mingw-w64-speexdsp/PKGBUILD
@@ -7,7 +7,7 @@ pkgver=1.2.1
 pkgrel=1
 pkgdesc="DSP library derived from Speex (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 license=('BSD')
 url="https://www.speex.org/"
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
