--- a/mingw-w64-spirv-headers/PKGBUILD
+++ b/mingw-w64-spirv-headers/PKGBUILD
@@ -9,7 +9,7 @@ pkgver=1.3.296.0
 pkgrel=1
 pkgdesc='Machine-readable files for the SPIR-V Registry (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url='https://www.khronos.org/registry/spir-v/'
 msys2_repository_url="https://github.com/KhronosGroup/SPIRV-Headers"
 license=('spdx:MIT')
